force-app/main/default/objects/Valid_Record_Mapping__c/Valid_Record_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>scaleMatters Valid Record Mapping</label>
</CustomObject>