force-app/main/default/objects/Valid_Record_Mapping__c/fields/DLD__c.field-meta.xml
<CustomField>
    <fullName>DLD__c</fullName>
    <label>DLD</label>
    <type>Date</type>
</CustomField>