force-app/main/default/objects/Valid_Record_Mapping__c/fields/HRD__c.field-meta.xml
<CustomField>
    <fullName>HRD__c</fullName>
    <label>HRD</label>
    <type>Date</type>
</CustomField>